# ocr_trans

./: Cargo.toml  README.md  build.rs  check_out.txt
src/: api.rs  capture.rs  credentials.rs  main.rs  win_utils.rs
ui/: main.slint
