[package]
name = "ocr_trans"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.9", features = ["renderer-skia"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
xcap = "0.0.14"
global-hotkey = "0.6"
base64 = "0.22"
arboard = "3.4.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi"
] }
i-slint-backend-winit = "1.9"
winit = "0.29"

[build-dependencies]
slint-build = "1.9"
winres = "0.1"

[profile.release]
opt-level = "z"      # 크기 최적화 (s 또는 z)
lto = true           # Link Time Optimization: 미사용 코드 제거
codegen-units = 1    # 병렬 컴파일을 제한하여 최적화 기회 극대화
panic = "abort"      # 패닉 발생 시 스택 추적 정보 제거
strip = true         # 심볼 정보 및 디버그 정보 강제 제거
